--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>SCS GO - Sạc xe thông minh</title>
+    <meta name="description" content="Tìm trạm sạc EV tối ưu, đặt chỗ trước và không bao giờ phải chờ đợi" />
+    <meta name="author" content="SCS GO" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="SCS GO - Sạc xe thông minh" />
+    <meta property="og:description" content="Tìm trạm sạc EV tối ưu, đặt chỗ trước và không bao giờ phải chờ đợi" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="SCS GO - Sạc xe thông minh" />
+    <meta name="twitter:description" content="Tìm trạm sạc EV tối ưu, đặt chỗ trước và không bao giờ phải chờ đợi" />
+
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
