feat: update favicon to logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="twitter:title" content="SCS GO - Sạc xe thông minh" />
     <meta name="twitter:description" content="Tìm trạm sạc EV tối ưu, đặt chỗ trước và không bao giờ phải chờ đợi" />
 
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/logo.png" />
   </head>
 
   <body>
