feat: Add PWA support for iOS with app icons and meta tags
- Generate iOS app icons (180x180, 152x152, 120x120px PNG)
- Add apple-touch-icon links for multiple sizes
- Update manifest.json to use PNG icons
- Add mobile-web-app-capable meta tag
- Install sharp for icon generation

--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
 
     <!-- PWA -->
     <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/logo.jpg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon-180x180.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-touch-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-touch-icon-120x120.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="SCS GO" />
+    <meta name="mobile-web-app-capable" content="yes" />
     
     <!-- Favicon -->
     <link rel="icon" type="image/jpeg" href="/logo.jpg?v=2" />
